--- a/index.html
+++ b/index.html
@@ -1,22 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="font.css">
+    <link rel="stylesheet" href="./intro.css">
     <title>Balutsoft</title>
 </head>
+
 <body>
-    <header>
-        <div class="head-menu">
-            <ul class="left">
-                <li>پشتیبانی</li>
-                <li>ورود</li>
-                <li>چت</li>
-            </ul>
+    <div class="head-section">
+
+        <header>
+            <div class="head-menu">
+                <div class="container">
+                    <ul class="left">
+                        <li>
+                            <a href="#">پشتیبانی</a>
+                            <span class="underline"></span>
+                        </li>
+                        <li>
+                            <a href="#">ورود</a>
+                            <span class="underline"></span>
+                        </li>
+                        <li>
+                            <a href="#">چت</a>
+                            <span class="underline"></span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </header>
+
+        <ul class="main-menu">
+            
+        </ul>
+
+        <div class="container">
+            <div class="intro">
+                <img src="./images/Image.png" />
+                <div class="intro-card">
+                    <h3>
+                        سرویس قدرتمند ارائه هاست
+                    </h3>
+                </div>
+            </div>
         </div>
-    </header>
+    </div>
+
 </body>
+
 </html>
