--- a/index.html
+++ b/index.html
@@ -35,11 +35,22 @@
             </div>
         </header>
 
-        <ul class="main-menu">
-            
-        </ul>
+
 
         <div class="container">
+            <div class="main-menu">
+                <h3 class="left">
+                    اسپیس درایو
+                </h3>
+
+                <ul class="right">
+                    <li>خانه</li>
+                    <li>دامین</li>
+                    <li>هاستینگ</li>
+                    <li>وبلاگ</li>
+                    <li>تماس</li>
+                </ul>
+            </div>
             <div class="intro">
                 <img src="./images/Image.png" />
                 <div class="intro-card">
