Start Search Field

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
         <div class="container">
             <div class="main-menu">
-                <h3 class="left">
+                <p class="left">
                     اسپیس درایو
-                </h3>
+                </p>
 
                 <ul class="right">
                     <li>
@@ -69,10 +69,23 @@
             <div class="intro">
                 <img src="./images/Image.png" />
                 <div class="intro-card">
-                    <h3>
+                    <p>
                         سرویس قدرتمند ارائه هاست
-                    </h3>
+                    </p>
+                    <span>
+                        آیا میدانستید میلیون ها وبسایت با خدمات ما فعال هستند
+                    </span>
+
+                    <button class="intro-btn">
+                        مشاهده
+                    </button>
                 </div>
+            </div>
+
+            <div class="search">
+                <p>
+                    دامین خود را جستوجو کنید
+                </p>
             </div>
         </div>
     </div>
