--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="font.css">
     <link rel="stylesheet" href="./intro.css">
+    <link rel="stylesheet" href="./search.css">
     <title>Balutsoft</title>
 </head>
 
@@ -86,7 +87,31 @@
                 <p>
                     دامین خود را جستوجو کنید
                 </p>
+
+                <div class="search-input">
+                    <input type="text">
+                    <select>
+                        <option>
+                            .com
+                        </option>
+                        <option>
+                            .uk
+                        </option>
+                        <option>
+                            .org
+                        </option>
+                    </select>
+                    <button>
+                        جستوجو
+                    </button>
+                </div>
+
+
             </div>
+
+            <div style="height: 100px">
+                    
+                </div>
         </div>
     </div>
 
