--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="font.css">
     <link rel="stylesheet" href="./intro.css">
     <link rel="stylesheet" href="./search.css">
+    <link rel="stylesheet" href="./lastheadsection.css">
     <title>Balutsoft</title>
 </head>
 
@@ -89,7 +90,7 @@
                 </p>
 
                 <div class="search-input">
-                    <input type="text">
+                    <input type="text" placeholder="دامین خود را جستوجو کنید">
                     <select>
                         <option>
                             .com
@@ -105,13 +106,44 @@
                         جستوجو
                     </button>
                 </div>
-
-
             </div>
 
-            <div style="height: 100px">
-                    
+            <div class="last-head-section">
+                <div class="card">
+                    <img src="./images/icon-update.png" />
+                    <p>به روزرسانی رایگان</p>
+                    <p>
+                        همان روزی که آیتم های خود را دریافت میکنید
+                        یکی از کارکنان ما با شما تماس خواهد گرفت
+                        و هیچگونه پیشنهاد پولی به روزرسانی دریافت نخواهید کرد
+                    </p>
                 </div>
+
+                <div class="card">
+                    <img src="./images/icon-security.png" />
+                    <p>امنیت</p>
+                    <p>
+                        همان روزی که آیتم های خود را دریافت میکنید
+                        یکی از کارکنان ما با شما تماس خواهد گرفت
+                        و هیچگونه پیشنهاد پولی به روزرسانی دریافت نخواهید کرد
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="./images/icon-cloud.png" />
+                    <p>بک اپ کلود</p>
+                    <p>
+                        همان روزی که آیتم های خود را دریافت میکنید
+                        یکی از کارکنان ما با شما تماس خواهد گرفت
+                        و هیچگونه پیشنهاد پولی به روزرسانی دریافت نخواهید کرد
+                    </p>
+                </div>
+            </div>
+
+
+
+            <div style="height: 100px">
+
+            </div>
         </div>
     </div>
 
