head-sectino-complete

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="./intro.css">
     <link rel="stylesheet" href="./search.css">
     <link rel="stylesheet" href="./lastheadsection.css">
+    <link rel="stylesheet" href="./whyus.css">
     <title>Balutsoft</title>
 </head>
 
 <body>
     <div class="head-section">
-
         <header>
             <div class="head-menu">
                 <div class="container">
@@ -138,12 +138,42 @@
                     </p>
                 </div>
             </div>
-
-
-
             <div style="height: 100px">
-
             </div>
+        </div>
+    </div>
+
+    <div class="why-us">
+        <div class="why-us-overlay">
+
+        </div>
+        <div class="container">
+            <div class="why-us-card">
+                <p>
+                    چرا ما
+                </p>
+                <p>
+                    نوین دو راه مختلف برای ساخت وب سایت شما پیش پایتان می‌گذارد. اولین راه انجام یک طراحی اختصاصی برای
+                    وب سایت شما است. طبیعتاً این روش هزینه بیشتری برای ما و شما خواهد داشت. راه دوم نیز استفاده از یک
+                    سیستم سایت ساز است که از طریق آن می‌توانید با یک هزینه مناسب سایت داشته باشید.
+                    نوین دو راه مختلف برای ساخت وب سایت شما پیش پایتان می‌گذارد. اولین راه انجام یک طراحی اختصاصی برای
+                    وب سایت شما است. طبیعتاً این روش هزینه بیشتری برای ما و شما خواهد داشت. راه دوم نیز استفاده از یک
+                    سیستم سایت ساز است که از طریق آن می‌توانید با یک هزینه مناسب سایت داشته باشید.
+                </p>
+
+                <button>
+                    بیشتر بخوانید
+                </button>
+            </div>
+            <img src="./images/WhyUsImage.png" />
+        </div>
+    </div>
+
+    <div class="services">
+        <div class="container">
+            <p>
+                سرویس های ما
+            </p>
         </div>
     </div>
 
