--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./search.css">
     <link rel="stylesheet" href="./lastheadsection.css">
     <link rel="stylesheet" href="./whyus.css">
+    <link rel="stylesheet" href="./services.css">
     <title>Balutsoft</title>
 </head>
 
@@ -171,9 +172,64 @@
 
     <div class="services">
         <div class="container">
-            <p>
+            <p class="head-title">
                 سرویس های ما
             </p>
+            <p class="head-des">
+                وب سایت شما خودش را با اندازۀ صفحه تطبیق خواهد داد. این یعنی کاربر با هر دستگاهی به آن سر بزند، باز هم
+                وب سایت شما درست نمایش داده می‌شود.
+            </p>
+
+            <div class="cards">
+                <div class="service-card">
+                    <img src="./images/cloud-hosting.png" />
+                    <p class="title">هاستینگ کلود</p>
+                    <p class="des">
+                        پس از تائید شما، طراحان ما بر اساس نقشه‌های اولیه و هویت بصری کسب و کارتان، وب سایت شما را به
+                        صورت گرافیکی طراحی خواهند کرد و جزئیات طرح شما را مشخص می‌کنند.
+                    </p>
+                </div>
+                <div class="service-card">
+                    <img src="./images/dec-host.png" />
+                    <p class="title">هاست اختصاصی </p>
+                    <p class="des">
+                        برنامه‌نویس‌های ما طرح گرافیکی مورد تائید شما را تبدیل به یک وب سایت واقعی می‌کنند. کار کدنویسی
+                        وب سایت به تمیزترین و اصولی‌ترین شکل ممکن انجام می‌شود.
+                    </p>
+                </div>
+                <div class="service-card">
+                    <img src="./images/shared-hosting.png" />
+                    <p class="title">هاستینگ توضع شده</p>
+                    <p class="des">
+                        برنامه‌نویس‌های ما طرح گرافیکی مورد تائید شما را تبدیل به یک وب سایت واقعی می‌کنند. کار کدنویسی
+                        وب سایت به تمیزترین و اصولی‌ترین شکل ممکن انجام می‌شود.
+                    </p>
+                </div>
+                <div class="service-card">
+                    <img src="./images/reseller-hosting.png" />
+                    <p class="title">هاستینگ توضع شده</p>
+                    <p class="des">
+                        برنامه‌نویس‌های ما طرح گرافیکی مورد تائید شما را تبدیل به یک وب سایت واقعی می‌کنند. کار کدنویسی
+                        وب سایت به تمیزترین و اصولی‌ترین شکل ممکن انجام می‌شود.
+                    </p>
+                </div>
+                <div class="service-card">
+                    <img src="./images/vps-hosting.png" />
+                    <p class="title">هاستینگ وی پی اس</p>
+                    <p class="des">
+                        برنامه‌نویس‌های ما طرح گرافیکی مورد تائید شما را تبدیل به یک وب سایت واقعی می‌کنند. کار کدنویسی
+                        وب سایت به تمیزترین و اصولی‌ترین شکل ممکن انجام می‌شود.
+                    </p>
+                </div>
+                <div class="service-card">
+                    <img src="./images/domain-reg.png" />
+                    <p class="title">ثبت دامین</p>
+                    <p class="des">
+                        برنامه‌نویس‌های ما طرح گرافیکی مورد تائید شما را تبدیل به یک وب سایت واقعی می‌کنند. کار کدنویسی
+                        وب سایت به تمیزترین و اصولی‌ترین شکل ممکن انجام می‌شود.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 
