add secure service

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./lastheadsection.css">
     <link rel="stylesheet" href="./whyus.css">
     <link rel="stylesheet" href="./services.css">
+    <link rel="stylesheet" href="./secure.css">
     <title>Balutsoft</title>
 </head>
 
@@ -229,6 +230,26 @@
                         وب سایت به تمیزترین و اصولی‌ترین شکل ممکن انجام می‌شود.
                     </p>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="secure">
+        <div class="container">
+            <div class="secure-service">
+                <div class="secure-service-card">
+                    <p class="title">
+                        سرویس امن
+                    </p>
+                    <p class="des">
+                        تمام استانداردهای سئو (بهینه سازی برای موتورهای جستجو) در وب سایت شما رعایت شده است و به راحتی
+                        می‌تواند رتبه های بالای گوگل را کسب کند.
+                        تمام استانداردهای سئو (بهینه سازی برای موتورهای جستجو) در وب سایت شما رعایت شده است و به راحتی
+                        می‌تواند رتبه های بالای گوگل را کسب کند.
+                    </p>
+                </div>
+
+                <img src="./images/secure-service.png" />
             </div>
         </div>
     </div>
