--- a/index.html
+++ b/index.html
@@ -247,9 +247,73 @@
                         تمام استانداردهای سئو (بهینه سازی برای موتورهای جستجو) در وب سایت شما رعایت شده است و به راحتی
                         می‌تواند رتبه های بالای گوگل را کسب کند.
                     </p>
+                    <ul class="checkboxes">
+                        <li>
+                            <img src="./images/checkbox.png" />
+                            <span>
+                                طراحی یک وب سایت کاربردی
+                            </span>
+                        </li>
+                        <li>
+                            <img src="./images/checkbox.png" />
+                            <span>
+                                طراحی یک وب سایت زیبا
+                            </span>
+                        </li>
+                        <li>
+                            <img src="./images/checkbox.png" />
+                            <span>
+                                طراحی یک وب سایت با هویت
+                            </span>
+                        </li>
+                    </ul>
+
+                    <span class="read-more">
+                        مطالعه ی بیشتر...
+                    </span>
                 </div>
 
                 <img src="./images/secure-service.png" />
+            </div>
+
+            <div class="secure-domain">
+                <div class="secure-service-card">
+                    <p class="title">
+                        سرویس امن
+                    </p>
+                    <p class="des">
+                        تمام استانداردهای سئو (بهینه سازی برای موتورهای جستجو) در وب سایت شما رعایت شده است و به راحتی
+                        می‌تواند رتبه های بالای گوگل را کسب کند.
+                        تمام استانداردهای سئو (بهینه سازی برای موتورهای جستجو) در وب سایت شما رعایت شده است و به راحتی
+                        می‌تواند رتبه های بالای گوگل را کسب کند.
+                    </p>
+                    <ul class="checkboxes">
+                        <li>
+                            <img src="./images/checkbox.png" />
+                            <span>
+                                طراحی یک وب سایت کاربردی
+                            </span>
+                        </li>
+                        <li>
+                            <img src="./images/checkbox.png" />
+                            <span>
+                                طراحی یک وب سایت زیبا
+                            </span>
+                        </li>
+                        <li>
+                            <img src="./images/checkbox.png" />
+                            <span>
+                                طراحی یک وب سایت با هویت
+                            </span>
+                        </li>
+                    </ul>
+
+                    <span class="read-more">
+                        مطالعه ی بیشتر...
+                    </span>
+                </div>
+
+                <img src="./images/secure-domain-image.png" />
             </div>
         </div>
     </div>
