add plnas section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./whyus.css">
     <link rel="stylesheet" href="./services.css">
     <link rel="stylesheet" href="./secure.css">
+    <link rel="stylesheet" href="./plans.css">
     <title>Balutsoft</title>
 </head>
 
@@ -319,6 +320,120 @@
         </div>
     </div>
 
+    <div class="plans-section">
+        <div class="container">
+            <div class="title">
+                <p>پلن خود را انتخاب کنید</p>
+                <p class="des">
+                    طراحی وب سایت اختصاصی شما در 3 مرحله انجام خواهد شد
+                </p>
+            </div>
+            <div class="plans">
+                <div class="plan-card">
+                    <div class="card-rad">
+                        <p class="type">
+                            معمولی
+                        </p>
+                        <div class="size">
+                            <p class="size-number">
+                                50
+                            </p>
+                            <span class="unit">
+                                GB
+                            </span>
+                        </div>
+
+                        <ul class="specs">
+                            <li>
+                                1 دامین مجانی
+                            </li>
+                            <li>
+                                300 گیگاباید ssd
+                            </li>
+                            <li>
+                                پیشنهادات ویژه
+                            </li>
+                            <li>
+                                پشتبانی نامحدود
+                            </li>
+                        </ul>
+
+                        <p class="price">
+                            23،000 تومان
+                        </p>
+                    </div>
+                </div>
+                <div class="plan-card">
+                    <div class="card-rad">
+                        <p class="type">
+                            پیشرفته
+                        </p>
+                        <div class="size">
+                            <p class="size-number">
+                                150
+                            </p>
+                            <span class="unit">
+                                GB
+                            </span>
+                        </div>
+
+                        <ul class="specs">
+                            <li>
+                                1 دامین مجانی
+                            </li>
+                            <li>
+                                300 گیگاباید ssd
+                            </li>
+                            <li>
+                                پیشنهادات ویژه
+                            </li>
+                            <li>
+                                پشتبانی نامحدود
+                            </li>
+                        </ul>
+
+                        <p class="price">
+                            23،000 تومان
+                        </p>
+                    </div>
+
+                </div>
+                <div class="plan-card">
+                    <div class="card-rad">
+                        <p class="type">
+                            حرفه ای
+                        </p>
+                        <div class="size">
+                            <p class="size-number">
+                                500
+                            </p>
+                            <span class="unit">
+                                GB
+                            </span>
+                        </div>
+
+                        <ul class="specs">
+                            <li>
+                                1 دامین مجانی
+                            </li>
+                            <li>
+                                300 گیگاباید ssd
+                            </li>
+                            <li>
+                                پیشنهادات ویژه
+                            </li>
+                            <li>
+                                پشتبانی نامحدود
+                            </li>
+                        </ul>
+                        <p class="price">
+                            23،000 تومان
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
