--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./services.css">
     <link rel="stylesheet" href="./secure.css">
     <link rel="stylesheet" href="./plans.css">
+    <link rel="stylesheet" href="./footer.css">
     <title>Balutsoft</title>
 </head>
 
@@ -363,7 +364,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="plan-card">
+                <div class="plan-card light-blue">
                     <div class="card-rad">
                         <p class="type">
                             پیشرفته
@@ -398,7 +399,7 @@
                     </div>
 
                 </div>
-                <div class="plan-card">
+                <div class="plan-card light-green">
                     <div class="card-rad">
                         <p class="type">
                             حرفه ای
@@ -434,6 +435,54 @@
             </div>
         </div>
     </div>
+
+    <footer>
+
+        <div class="container">
+            <div class="footer-menu">
+
+                <div class="footer-menu-item">
+                    <p class="title">
+                        اسپیس درایو
+                    </p>
+                    <ul class="footer-items">
+
+                    </ul>
+                </div>
+                <div class="footer-menu-item">
+                    <p class="title">
+                        لینک های سریع
+                    </p>
+                    <ul class="footer-items">
+
+                    </ul>
+                </div>
+                <div class="footer-menu-item">
+                    <p class="title">
+                        پشتیبانی
+                    </p>
+                    <ul class="footer-items">
+
+                    </ul>
+                </div>
+                <div class="footer-menu-item">
+                    <p class="title">
+                        حساب کاربری
+                    </p>
+                    <ul class="footer-items">
+
+                    </ul>
+                </div>
+                <div class="footer-menu-item">
+                    <p class="title">
+                        اخبار
+                    </p>
+
+                </div>
+            </div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
