--- a/index.html
+++ b/index.html
@@ -96,17 +96,20 @@
 
                 <div class="search-input">
                     <input type="text" placeholder="دامین خود را جستوجو کنید">
-                    <select>
-                        <option>
-                            .com
-                        </option>
-                        <option>
-                            .uk
-                        </option>
-                        <option>
-                            .org
-                        </option>
-                    </select>
+                    <div class="select">
+                        <select>
+                            <option>
+                                .com
+                            </option>
+                            <option>
+                                .uk
+                            </option>
+                            <option>
+                                .org
+                            </option>
+                        </select>
+                    </div>
+ 
                     <button>
                         جستوجو
                     </button>
