--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <div id="why-us" data-animation="fade-in" class="why-us">
         <div class="container">
-            <div class="why-us-card revealOnScroll" data-animation="slide-from-left" >
+            <div class="why-us-card revealOnScroll" data-animation="slide-from-left">
                 <p>
                     چرا ما
                 </p>
@@ -188,7 +188,7 @@
             </p>
 
             <div class="cards revealOnScroll" data-animation="fade-in">
-                <div class="service-card"  >
+                <div class="service-card">
                     <img src="./images/cloud-hosting.png" />
                     <p class="title">هاستینگ کلود</p>
                     <p class="des">
@@ -196,7 +196,7 @@
                         صورت گرافیکی طراحی خواهند کرد و جزئیات طرح شما را مشخص می‌کنند.
                     </p>
                 </div>
-                <div class="service-card" >
+                <div class="service-card">
                     <img src="./images/dec-host.png" />
                     <p class="title">هاست اختصاصی </p>
                     <p class="des">
@@ -204,7 +204,7 @@
                         وب سایت به تمیزترین و اصولی‌ترین شکل ممکن انجام می‌شود.
                     </p>
                 </div>
-                <div class="service-card" >
+                <div class="service-card">
                     <img src="./images/shared-hosting.png" />
                     <p class="title">هاستینگ توضع شده</p>
                     <p class="des">
@@ -212,7 +212,7 @@
                         وب سایت به تمیزترین و اصولی‌ترین شکل ممکن انجام می‌شود.
                     </p>
                 </div>
-                <div class="service-card" >
+                <div class="service-card">
                     <img src="./images/reseller-hosting.png" />
                     <p class="title">هاستینگ توضع شده</p>
                     <p class="des">
@@ -220,7 +220,7 @@
                         وب سایت به تمیزترین و اصولی‌ترین شکل ممکن انجام می‌شود.
                     </p>
                 </div>
-                <div class="service-card" >
+                <div class="service-card">
                     <img src="./images/vps-hosting.png" />
                     <p class="title">هاستینگ وی پی اس</p>
                     <p class="des">
@@ -228,7 +228,7 @@
                         وب سایت به تمیزترین و اصولی‌ترین شکل ممکن انجام می‌شود.
                     </p>
                 </div>
-                <div class="service-card" >
+                <div class="service-card">
                     <img src="./images/domain-reg.png" />
                     <p class="title">ثبت دامین</p>
                     <p class="des">
@@ -332,8 +332,8 @@
                     طراحی وب سایت اختصاصی شما در 3 مرحله انجام خواهد شد
                 </p>
             </div>
-            <div id="plans" data-animation="fade-in" class="plans">
-                <div class="plan-card">
+            <div id="plans"  class="plans">
+                <div class="plan-card revealOnScroll" data-animation="fade-in">
                     <div class="card-rad">
                         <p class="type">
                             معمولی
@@ -367,7 +367,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="plan-card light-blue">
+                <div class="plan-card light-blue revealOnScroll" data-animation="fade-in">
                     <div class="card-rad">
                         <p class="type">
                             پیشرفته
@@ -402,7 +402,7 @@
                     </div>
 
                 </div>
-                <div class="plan-card light-green">
+                <div class="plan-card light-green revealOnScroll" data-animation="fade-in">
                     <div class="card-rad">
                         <p class="type">
                             حرفه ای
@@ -448,16 +448,28 @@
                     <p class="title">
                         اسپیس درایو
                     </p>
-                    <ul class="footer-items">
-
-                    </ul>
+                    اسپیس درایو
                 </div>
                 <div class="footer-menu-item">
                     <p class="title">
                         لینک های سریع
                     </p>
                     <ul class="footer-items">
-
+                        <li>
+                            <a href="#">دامین</a>
+                        </li>
+                        <li>
+                            <a href="#">هاستینگ</a>
+                        </li>
+                        <li>
+                            <a href="#">VHMCS</a>
+                        </li>
+                        <li>
+                            <a href="#">وبلاگ</a>
+                        </li>
+                        <li>
+                            <a href="#">تماس</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="footer-menu-item">
@@ -473,12 +485,17 @@
                         حساب کاربری
                     </p>
                     <ul class="footer-items">
-
+                        <li>
+                            <a href="#">اکانت من</a>
+                        </li>
+                        <li>
+                                <a href="#">ساخت اکانت</a>
+                            </li>
                     </ul>
                 </div>
                 <div class="footer-menu-item">
                     <p class="title">
-                        اخبار
+                        <a href="#">اخبار</a>
                     </p>
 
                 </div>
