--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
             </div>
 
-            <div class="last-head-section">
+            <div class="last-head-section revealOnScroll" data-animation="fade-in">
                 <div class="card">
                     <img src="./images/icon-update.png" />
                     <p>به روزرسانی رایگان</p>
@@ -173,7 +173,7 @@
                     بیشتر بخوانید
                 </button>
             </div>
-            <img src="./images/WhyUsImage.png" />
+            <img src="./images/WhyUsImage.png"  class="revealOnScroll" data-animation="fade-in" />
         </div>
     </div>
 
@@ -247,13 +247,13 @@
                     <p class="title">
                         سرویس امن
                     </p>
-                    <p class="des">
+                    <p class="des revealOnScroll" data-animation="slide-with-fade">
                         تمام استانداردهای سئو (بهینه سازی برای موتورهای جستجو) در وب سایت شما رعایت شده است و به راحتی
                         می‌تواند رتبه های بالای گوگل را کسب کند.
                         تمام استانداردهای سئو (بهینه سازی برای موتورهای جستجو) در وب سایت شما رعایت شده است و به راحتی
                         می‌تواند رتبه های بالای گوگل را کسب کند.
                     </p>
-                    <ul class="checkboxes">
+                    <ul class="checkboxes revealOnScroll" data-animation="slide-with-fade">
                         <li>
                             <img src="./images/checkbox.png" />
                             <span>
@@ -261,7 +261,7 @@
                             </span>
                         </li>
                         <li>
-                            <img src="./images/checkbox.png" />
+                            <img src="./images/checkbox.png" class="revealOnScroll" data-animation="fade-in" />
                             <span>
                                 طراحی یک وب سایت زیبا
                             </span>
@@ -274,12 +274,12 @@
                         </li>
                     </ul>
 
-                    <span class="read-more">
+                    <span class="read-more revealOnScroll" data-animation="slide-with-fade">
                         مطالعه ی بیشتر...
                     </span>
                 </div>
 
-                <img src="./images/secure-service.png" />
+                <img src="./images/secure-service.png" class="revealOnScroll" data-animation="fade-in" />
             </div>
 
             <div class="secure-domain">
@@ -287,13 +287,13 @@
                     <p class="title">
                         سرویس امن
                     </p>
-                    <p class="des">
+                    <p class="des revealOnScroll" data-animation="slide-with-fade">
                         تمام استانداردهای سئو (بهینه سازی برای موتورهای جستجو) در وب سایت شما رعایت شده است و به راحتی
                         می‌تواند رتبه های بالای گوگل را کسب کند.
                         تمام استانداردهای سئو (بهینه سازی برای موتورهای جستجو) در وب سایت شما رعایت شده است و به راحتی
                         می‌تواند رتبه های بالای گوگل را کسب کند.
                     </p>
-                    <ul class="checkboxes">
+                    <ul class="checkboxes revealOnScroll" data-animation="slide-with-fade">
                         <li>
                             <img src="./images/checkbox.png" />
                             <span>
@@ -314,12 +314,12 @@
                         </li>
                     </ul>
 
-                    <span class="read-more">
+                    <span class="read-more revealOnScroll" data-animation="slide-with-fade">
                         مطالعه ی بیشتر...
                     </span>
                 </div>
 
-                <img src="./images/secure-domain-image.png" />
+                <img src="./images/secure-domain-image.png" class="revealOnScroll" data-animation="fade-in" />
             </div>
         </div>
     </div>
@@ -332,7 +332,7 @@
                     طراحی وب سایت اختصاصی شما در 3 مرحله انجام خواهد شد
                 </p>
             </div>
-            <div id="plans"  class="plans">
+            <div id="plans" class="plans">
                 <div class="plan-card revealOnScroll" data-animation="fade-in">
                     <div class="card-rad">
                         <p class="type">
@@ -489,8 +489,8 @@
                             <a href="#">اکانت من</a>
                         </li>
                         <li>
-                                <a href="#">ساخت اکانت</a>
-                            </li>
+                            <a href="#">ساخت اکانت</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="footer-menu-item">
