new animation to whyus and select form in search section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
     </div>
 
-    <div id="why-us" data-animation="fade-in" class="why-us">
+    <div id="why-us" data-animation="whyus-background" class="why-us revealOnScroll">
         <div class="container">
             <div class="why-us-card revealOnScroll" data-animation="slide-from-left">
                 <p>
